--- a/doubledot/core/static/core/components/sections/service.css
+++ b/doubledot/core/static/core/components/sections/service.css
@@ -8,7 +8,6 @@
     width: 100%;
     overflow: hidden;
     border-radius: 5px;
-
 }
 
 .service-card{
@@ -17,12 +16,15 @@
     box-shadow: 2px 3px 5px rgba(0, 0,0, 0.5);
     border-radius: 5px;
     /* border:2px solid rgb(200, 200, 200); */
-    padding:20px;
-    display: grid;
-    grid-template-columns: 3fr 7fr;
+    padding:20px 40px;
     cursor: pointer;
     height: 100%;
     border-radius: 5px;
+}
+
+.service-wrapper{
+    display: grid;
+    grid-template-columns: 3fr 7fr;
 }
 
 .overlay{
@@ -33,13 +35,11 @@
     bottom: 0;
     box-shadow: 2px 3px 5px rgba(0, 0,0, 0.2);
     border-radius: 5px;
-    padding:30px 20px;
-    display: grid;
-    grid-template-columns: 3fr 7fr;
+    padding:20px 40px;
     cursor: pointer;
     /* background-image: url(../../../../../static/images/service_card_bg_.png); */
     background-color: var(--primary-color);
-    transform: translateY(200px);
+    transform: translateY(230px);
     z-index: 1000;
     transition: .3s ease-in;
     height: 100%;
@@ -50,16 +50,16 @@
     height: 210px;
 }
 
-
-
 .service-card .service-title{
     color: var(--primary-color);
     font-family: var(--font-title);
+    
 }
 
 .service-card .service-description{
     margin-top: 1rem;
     color: var(--text-color);
+    font-size: .9rem;
 }
 .service-img{
     max-width: fit-content;
@@ -99,8 +99,9 @@
 
 .overlay .service-description{
     /* color: greenyellow; */
-    margin-top:10px;
+    margin-top: .9rem;
     color:var(--background-color);
+    
 
 }
 
@@ -109,6 +110,8 @@
     justify-content: flex-end;
     align-items: center;
     padding: 5px;
+    width: 100%;
+    bottom:0;
 }
 
 .service-icon i{
@@ -128,9 +131,33 @@
 }
 
 @media(min-width:600px){
+    .service-icon{
+        transform:scale(.8)
+    }
     .service-grid-3x2{
         grid-template-columns: repeat(2, 1fr);
+        padding: 0rem 0;
+        gap: 10px;
     }
+    
+    .service-card{
+        padding:20px 10px;
+        grid-template-columns: 3fr 7fr;
+    }
+
+    .overlay{
+        padding: 20px 10px;
+    }
+    .overlay .service-description, .service-card .service-description{
+        font-size: .9rem;
+    }
+
+    .overlay .service-title, .service-card .service-title{
+        font-size: 1rem;
+        
+    }
+    
+   
 }
 
 
@@ -145,12 +172,18 @@
 
     .service-card{
         height: 200px;
+        padding:20px;
+        grid-template-columns: 3fr 7fr;
     }
 
     .service-grid-3x2{
         grid-template-columns: repeat(3, 1fr);
+        margin-top:20px
     }
-
+    .service-icon{
+        position:absolute;
+        margin-top:20px;
+    }
     .overlay .service-icon{
         display: flex;
         justify-content: flex-end;
@@ -164,6 +197,10 @@
     /* .service-container{
         margin-bottom: 40px;
     } */
+
+    .service-description{
+        font-size: 1rem;
+    }
 }
 
 
