--- a/doubledot/core/static/core/components/sections/sub/section.css
+++ b/doubledot/core/static/core/components/sections/sub/section.css
@@ -26,3 +26,15 @@
 .section-header p{
     color:var(--text-color-2)
 }
+
+@media(min-width:600px){
+    .section-header-container{
+        margin:20px 0px;
+    }
+}
+
+@media(min-width:900px){
+    .section-header-container{
+        margin:40px 0px;
+    }
+}
