--- a/doubledot/core/static/core/components/sections/testimonies/testimony.module.css
+++ b/doubledot/core/static/core/components/sections/testimonies/testimony.module.css
@@ -1,53 +1,46 @@
-
-.testimonyContainer{
-    background-color: white;
-    padding-bottom: 70px;  
+.swiper__container{
+    /* place-content: center; */
+    align-items: center;
+    margin:30px auto;
+    /* padding:20px; */
 }
-
-.testimonyContainer h2, .testimonyContainer h4{
-    color: var(--primary-color);
-    
-}
-
-.testimonyWrapper{
-    background-color: var(--header-color)
-}
-/* .progressBar{
-    height: 4px;
-    width: 100%;
-    background-color: var(--secondary-color);
-    animation: grow 10s linear infinite;
-    transform-origin: left;
-} */
-
-.testimony__card{
-    max-width: 100vw;
-    padding: 60px;
+.testimony__container{
+    /* max-width: 100vw; */
+    padding: 10px;
     background-color: var(--background-color);
-    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 10px;
     border: 2px solid var(--background-color);
     font-family: 300;
+    background-color: white;
+    box-shadow: 2px 3px 10px rgba(0,0,0, 0.2);
 }
 
+.testimony__card{
+    background-color: transparent;
+    padding:20px;
+}
 
 .testimonial{
     color: var(--text-color);
     font-family: Mulish;
-    width: 500px;
-    font-size: 1.2rem;
+    /* width: 500px; */
+    font-size: 1rem;
     font-weight: 300;
-    margin: 40px 50px ;
+    padding: 20px;
     text-align: center;
 }
 
 .left i {
-    font-size: 3rem;
+    font-size: 2rem;
     position: absolute;
     color: var(--primary-color);
-    left: 0;
-    margin-left: 40px;
+    left: 5%;
+    /* margin-left: 40px; */
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+    opacity: 0.2;
 }
 
 .testimony__userDetails{
@@ -57,8 +50,8 @@
 }
 
 .testimony__image{
-    width: 80px;
-    height: 80px;
+    width: 50px;
+    height: 50px;
     display:flex;
     justify-content: center;
     align-items: center;
@@ -76,9 +69,13 @@
 }
 
 .testimony__user_position{
-    margin-left: 20px;
-
+    margin: 10px;
 }
+
+.testimony__user_position p{
+    padding: 5px 0
+}
+
 .testimony__position{
     color: var(--primary-color);
     font-family: Poppins;
@@ -91,27 +88,75 @@
     color: var(--accent-color);
 }
 
-@keyframes grow{
-    0% {
-        transform: scaleX(0);
+@media(min-width:400px){
+    .testimonial{
+        max-width: 400px;
+        font-size: 1.1rem;
     }
 }
 
-
-
-@media(max-width:1000px){
-    .card {
-        width: 90vw;
-        padding: 30px 30px;
-        /* background-color: rgb(149, 149, 216); */
-        background-color: var(--accent-4-color);
-        position: relative;
-    }
+@media(min-width:600px){
     .left i {
-        font-size: 40px;
-        position: absolute;
-        color: var(--color);
-        left: 0;
-        margin-left: 20px;
+        font-size: 2.5rem;
+        left: 7%;
+        opacity: 0.3;
     }
+    
+    .testimony__container{
+        margin: 10px;
+        padding: 20px;
+    }
+    
+    .testimony__image{
+        width: 70px;
+        height: 70px;
+    }
+    
+    .testimonial{
+        max-width: 600px;
+        font-size: 1.2rem;
+        font-weight: 300;
+        padding: 20px;
+    }
+
+    .swiper__container{
+        width: 100%;
+        padding:0px;
+    }
+    .testimony__user_position p{
+        padding: 10px 0
+    }
+    .testimony__card{
+        padding:30px;
+    }
+    
+}   
+
+@media(min-width:900px){
+    .left i {
+        font-size: 3rem;
+        left: 10%;
+        opacity: 0.4;
+    }
+    
+    .testimony__container{
+        margin: 40px 60px;
+    }
+    
+    .testimonial{
+        width: 500px;
+        font-size: 1.2rem;
+        font-weight: 400;
+        padding: 20px;
+    }
+    
+}
+
+@media(min-width:1200px){
+    .left i {
+        font-size: 3rem;
+        left: 20%;
+        opacity: 0.5;
+    }
+    
 }
