--- a/doubledot/core/static/core/layouts/footer/footer-components/company.module.css
+++ b/doubledot/core/static/core/layouts/footer/footer-components/company.module.css
@@ -35,7 +35,7 @@
 }
 
 .company_socialmedia_icons i{
-    color: var(--footer-text-color);
+    color: var(--footer-text-p);
 }
 
 .company_socialmedia_icons:focus{
@@ -46,6 +46,6 @@
 .company_socialmedia_icons:hover{
     color: var(--footer-title-color);
     transform: Scale(1.05);
-    background-color: var(--hightlight-color);
+    background-color: var(--primary-color);
     transition: transform 0.6s ease-in-out;
 }
