--- a/doubledot/core/static/core/components/sections/sub/section.css
+++ b/doubledot/core/static/core/components/sections/sub/section.css
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px;
+    /* padding: 10px; */
     /* background-image: url(../static/icons/logo_gray.png); */
     background-repeat: no-repeat;
     background-size: contain;
