--- a/doubledot/core/static/core/components/sections/whatWeDo/whatWeDo.css
+++ b/doubledot/core/static/core/components/sections/whatWeDo/whatWeDo.css
@@ -12,7 +12,7 @@
 
 .service-card{
     position:relative;
-    background-color:  #f1f0f0;
+    background-color:  var(--background-color-2);
     box-shadow: 2px 3px 5px rgba(0, 0,0, 0.5);
     border-radius: 5px;
     /* border:2px solid rgb(200, 200, 200); */
