--- a/doubledot/static/css/base.css
+++ b/doubledot/static/css/base.css
@@ -8,7 +8,8 @@
     --font-header:"Roboto";
     --font-size:16px;
     --background-color:#fbfbfb;
-    --background-color-2:#f1f0f0;
+    /* --background-color-2:#f1f0f0; */
+    --background-color-2: #d0e3f6;
     --section-background-color:#f1f0f0;
     --primary-color:#ea7822;
     --main-color:#14284b;
