--- a/doubledot/core/static/core/components/modal/idea/ideaForm.css
+++ b/doubledot/core/static/core/components/modal/idea/ideaForm.css
@@ -1,17 +1,12 @@
 
 form{
     margin:0 auto;
-    height: fit-content;
-    max-height: max-content;
-    overflow-anchor: 0;
-    overflow: hidden;
-    overflow: -moz-hidden-unscrollable;
-    max-height: 450px;
-    overflow-y: scroll;
+    height: max-content;
 }
 
 .form-container{
-    margin: 0 auto;
+    margin: 0 10px;
+    min-width: 300px;
 }
 
 .form-input-container{
@@ -19,7 +14,18 @@ form{
     grid-template-columns: 1fr 1fr;
     gap: 20px;
     align-items: center;
-    margin: 0 20px;
+}
+
+.form-input-textarea{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 20px;
+    align-items: center;
+}
+
+.form-input-textarea textarea{
+    padding: 7px;
+    font-family: var(--font-content);
 }
 
 .form-input-wrapper label{
@@ -33,27 +39,23 @@ form{
 }
 
 .form-input input{
-    padding:7px;
     border: 2px solid gainsboro;
     border-radius: 10px;
-    width: 95%;
+    width: 100%;
     margin: 5px 0;
-    padding: 10px 5px
+    padding: 10px;
    
 }
 .form-input input:focus{
     border:2px solid var(--primary-color)
 }
 
-.form-input-wrapper.textarea{
-    margin:0 20px;
-}
 .form-input-wrapper .form-textarea{
     border: 1px solid gray;
     color:var(--header-color);
     font-family: var(--font-content);
-    width: 93%;
-    padding: 20px;
+    width: 100%;
+    /* padding: 20px; */
     border-radius: 8px;
     margin-top:10px;
     font-size: 1.2rem;
@@ -78,22 +80,27 @@ form{
     font-weight: 500;
 }
 
-.form-input-wrapper.confirmation{
+.form-input-confirmation{
     margin:0 auto;
 }
 
-.form-input-wrapper.confirmation .form-check{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    margin: 20 40px;
+.form-input-confirmation .form-check{
+    display: grid;
+    width: 100%;
+    grid-template-columns: 1fr 9fr;
+    place-content: center;
+    margin: 20px 0;
 }
 
-.form-input-wrapper.confirmation .form-check p{
-    margin-left:20px;
+.form-input-confirmation .form-check input{
+    width: 20px; height:20px;
+}
+.form-input-confirmation .form-check p{
+    margin-left:10px;
     color: var(--header-color);
     font-size:.9rem;
 }
+
 
 @media (max-width:500px){
     form{
@@ -104,7 +111,6 @@ form{
         grid-template-columns: 1fr;
         align-items: center;
         gap: 0px;
-        margin: 10px;
     }
 
     .form-input label{
@@ -112,10 +118,6 @@ form{
         font-size: .9rem;
     }
 
-    .form-input-wrapper.textarea{
-        width: 90%;
-        margin:0 10px;
-    }
 
     .form-textarea{
         width: 100%;
@@ -124,17 +126,9 @@ form{
         margin-top:10px;
     }
     
-    .form-input-wrapper.confirmation .form-check{
-        margin: 20px;
-    }
-    .form-input-wrapper.confirmation .form-check p{
-        margin-left:5px;
-    } 
+
 }
 
 @media(min-width:600px){
-    .form-input-wrapper.confirmation .form-check{
-        margin: 20px 10px;
-    }
     
 }
