--- a/doubledot/core/static/core/components/modal/idea/ideaPage.css
+++ b/doubledot/core/static/core/components/modal/idea/ideaPage.css
@@ -1,13 +1,12 @@
 
 .idea-page-container{
     height: max-content;
-    padding: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    overflow-y: scroll;
-    margin: 0 auto; 
+    margin: 0 auto;
+    width:100%;
 }
 
 .idea-page-wrapper{
@@ -15,7 +14,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin:0 20px;
+    margin:10px;
     gap:10px;
 }
 
@@ -24,7 +23,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 150px;
+    padding:0 30px;
     height: max-content;
 }
 
@@ -87,6 +86,9 @@
 }
 
 @media (min-width:600px){
+    .idea-page-container{
+        padding: 20px;
+    }
     .idea-page-wrapper{
         flex-direction: row;
         justify-content: space-between;
@@ -97,7 +99,8 @@
     }
 
     .idea-page-wrapper .card{
-        width: 200px;
+        width: max-content;
+        padding:0 30px;
         margin: 0px;
     }
     
@@ -106,9 +109,10 @@
 @media(min-width:900px){
     .idea-page-container{
         overflow: hidden;  
+        padding: 0 20px;
     }
     .idea-page-wrapper .card{
-        width: 150px;
+        padding: 0 40px;
         margin: 0px 0px;
     }
     
