update remote branch

--- a/doubledot/core/template/core/index.html
+++ b/doubledot/core/template/core/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block style %}<link rel="stylesheet" href="{% static './layout.css' %}">{% endblock %}
+<!-- {% block style %}<link rel="stylesheet" href="{% static './layout.css' %}">{% endblock %} -->
 {% block content %}
     <div id="root"></div>
     <div id="portal"></div>
@@ -9,4 +9,5 @@
 
 <!-- <script id="name" type="application/json">
     [{"name": "Nwokocha Maruche"}] 
+    // where name is the context key passed in the view
   </script> -->
