--- a/doubledot/core/static/core/layouts/header/header.css
+++ b/doubledot/core/static/core/layouts/header/header.css
@@ -92,7 +92,7 @@
 @media(min-width:600px){
     .header_wrapper{
         margin: 0px 20px;
-        padding:10px 0;
+        /* padding:5px 0; */
     }
     
     .header_idea{
@@ -105,7 +105,7 @@
         border: 2px solid var(--highlight-color);
         color: var(--primary-color);
         font-size: 1.1rem;
-        padding: 10px 20px; 
+        padding: 5px 20px; 
         font-weight: 500;
         font-family: var(--font-title);
         border-radius: 50px;
@@ -130,7 +130,7 @@
 @media(min-width:900px){
     .header_wrapper{
         margin: 0px 40px;
-        padding:20px 0;
+        padding:10px 0;
     }
     .header_idea h2{
         font-size: 1.4rem;
