--- a/doubledot/core/static/core/components/sections/blog/articles.module.css
+++ b/doubledot/core/static/core/components/sections/blog/articles.module.css
@@ -1,5 +1,6 @@
 .blog_wrapper{
     margin:0 auto;
+    background-color: blueviolet;
 }
 
 .blog_header{
@@ -37,7 +38,14 @@
 .blog_articles{
     display: grid;
     place-content: center;
-   
+    padding:20px;
+}
+
+.article_container{
+    background-color:red;
+    padding:20px;
+    border-radius: 12px;
+    border: 1px solid rgb(220, 234, 246)
 }
 
 .article_img{
@@ -48,7 +56,20 @@
     width:100%;
     object-fit: contain;
 }
+
+.article_btn button{
+    padding: 20px;
+    color: rgb(4, 157, 4);
+    font-size:1.2rem;
+}
 @media(min-width:900px){
+
+    .article_img{
+        height: 364px;
+        width: auto;
+        border-radius: 8px;
+    }
+
     .blog_header{
         padding: 10% 40px;
     }
@@ -56,7 +77,7 @@
     .blog_articles{
         grid-template-columns: repeat(2, 1fr);
         gap:20px;
-        margin: 40px;
+        margin: 40px 40%;
     }
     
 }
