--- a/doubledot/core/static/core/components/mobileApp/mobileAppPlatform/mobilePlatform.module.css
+++ b/doubledot/core/static/core/components/mobileApp/mobileAppPlatform/mobilePlatform.module.css
@@ -16,6 +16,9 @@
 
 .platform_inner{
     position: relative;
+    border: 2px dashed lightblue;
+    max-width: max-content;
+    border-radius: 50%;
 }
 
 .platform_allplatforms{
@@ -28,6 +31,15 @@
 
 .platform_allplatforms:hover{
     background-color: rgb(188, 221, 250);
+}
+
+.platform_ring_dashed{
+    width:100%;
+    height:100%;
+    border: 2px dashed teal;
+    border: 50%;
+    background-color: aliceblue;
+
 }
 
 .platform_android{
